react-app/src/components/ProductsPage/ProductDetail/ProductDetail.css
.product-details-container {
  display: flex;
  flex-direction: column;
  margin: 0px 10%;
}

.product {
  display: flex;
  margin-top: 20px;
}

.product-image {
  border-radius: 3px;
  object-fit: contain;
  margin: 20px 0px 0px 20%;
}

.product-price {
  font-weight: bold;
  margin: 15px 0px;
  font-size: 1.2em;
}

.product-description {
  font-size: .95rem;
  margin: 20px 20px 20px 0px;
}

.product-info-container {
  margin: 0px 25% 0px 200px;
  font-size: .95rem;
}
.add-to-cart-btn {
  background-color:  rgb(0, 0, 0);
  box-sizing: border-box;
  border-radius: 24px;
  font-size: 16px;
  font-weight: bold;
  border: none;
  cursor: pointer;
  align-self: center;
  color:white;
  position: relative;
  text-align: center;
  padding: 15px 150px;
  margin: 20px 0px 10px 0px;
}

.add-to-cart-btn:hover {
  color: white;
  background-color: rgba(13, 14, 19, 0.7);
}

.delete-btn {
  background-color:  rgb(0, 0, 0);
  box-sizing: border-box;
  border-radius: 30px;
  font-size: 16px;
  font-weight: bold;
  border: none;
  cursor: pointer;

  color:white;
  text-align: center;
  padding: 10px 38px;
  margin: 20px 0px 10px 0px;
}

.delete-btn:hover {
  background-color: black;
  color: rgba(248, 248, 248, 0.85);
}

.product-btn-container > button {
  margin: 0px 10px 0px 0px;
  width: 10;
  font-size: .80em;
}

.size-selector {
  box-shadow: 0 1px 6px 0 rgb(34 34 34 / 15%);
  display: block;
  font-size: 16px;
  height: 48px;
  padding-left: 12px;
  padding-right: 36px;
  width: 100%;
  border-radius: 6px;
  background: #FFFFFF;
  border-color: rgba(34, 34, 34, 0.15);
  border-style: solid;
  border-width: 1px;
  color: #222222;
  text-indent: 0.01px;
  text-overflow: "";
  cursor: pointer;
}

.size-text {
  margin: 20px 20px 0px 0%;
  font-weight: 400;
  font-size: 15px;
  line-height: 18px;
}
/*
.bottom-right-container {
  margin: 0px 50px 50px 50px;
  width:25%;
  font-size: .95rem;
} */

